<resources>
    <string name="app_name">Global News</string>
    <string name="new_user_signup">New User? <b>SignUp</b></string>
    <string name="logo_description">Logo Global News</string>
    <string name="login_menu">Login</string>
    <string name="register_menu">Register</string>
    <string name="main_menu">Welcome to Global News</string>
    <string name="search_hint">Search</string>
    <string name="update_button">Update</string>
    <string name="news">News</string>
    <string name="category">Category</string>
    <string name="name">Name</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="skip_login">Skip Login</string>
    <string name="add_news_button">Add News</string>
    <string name="attach_button">Attach Button</string>
    <string name="news_title">Input News Title</string>
    <string name="news_description">Input News Description</string>
    <string name="news_detail">News Detail</string>
    <string name="news_date">Input News Date</string>
    <string name="news_category">Input News Category</string>
    <string name="edit_news_title">Edit News Info</string>
    <string name="edit_news_desc">Edit a news info</string>
    <string name="add_category">+ Add Category</string>
    <string name="add_category_title">Add New Category</string>
    <string name="add_category_desc">Add new category</string>
    <string name="add_category_note">Add a new category for news</string>
    <string name="add_category_req">Enter new category</string>
    <string name="add_news_title">Add a New News</string>
    <string name="input_category">Input Category Title</string>
    <string name="profile_button_description">Profile Button</string>
    <string name="logout_button_description">Logout Button</string>
    <string name="example_username">Full Name</string>
    <string name="example_email">abc@example.com</string>
    <string name="admin_dashboard">Admin Dashboard</string>
    <string name="user_dashboard">User Dashboard</string>
    <string name="forget_password_decription">Forget Password ?</string>
    <string name="forget_password_note1">We will send you message via email</string>
    <string name="forget_password_note2">To reset your password</string>
    <string name="forget_password_req">Enter your email address</string>
    <string name="back_description">Back Button</string>
    <string name="menubar_description">Menu Global News</string>
    <string name="searchbar_description">Search Bar Global News</string>
    <string name="username_description">Input Username</string>
    <string name="email_description">Input Email</string>
    <string name="password_description">Input Password</string>
    <string name="password_confirmation">Re-input Password</string>
    <string name="button_login_description">Login</string>
    <string name="button_register_description">Register</string>
    <string name="button_reset_description">Clear</string>
    <string name="button_submit_description">Submit</string>
    <string name="tv_register_description">Don\'t have any account ? Register Here</string>
    <string name="tv_login_description">Already have an account ? Login Here</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_of_news">Title of News</string>
    <string name="contact_us">Contact Us</string>
    <string name="contact_us_desc">Contact us</string>
    <string name="list_developer">List Developer of</string>
    <string name="nama_developer">Nama Developer</string>
    <string name="nim_developer">NIM Developer</string>
    <string name="kelas_developer">Kelas Developer</string>
    <string name="gambar_profile_developer">Gambar Profile Developer</string>
    <string name="developer_detail">Developer Detail</string>
    <string name="kelas_mahasiswa">Kelas Mahasiswa</string>
    <string name="nim_mahasiswa">NIM Mahasiswa</string>
    <string name="nama_mahasiswa">Nama Mahasiswa</string>
    <string name="gambar_profil">Gambar Profil</string>
    <string name="kelompok_1">Kelompok 1 Pemrograman Mobile</string>
    <string name="logo_copyright">Logo Copyright</string>
    <string name="detail_contact_us">Detail Contact Us</string>
    <string name="nama_mahasiswa_desc">Nama Mahasiswa : </string>
    <string name="nim_mahasiswa_desc">NIM Mahasiswa : </string>
    <string name="kelas_mahasiswa_desc">Kelas Mahasiswa : </string>
    <string name="logo_email">Logo Email</string>
    <string name="email_mahasiswa">Email Mahasiswa</string>
    <string name="logo_telepon">Logo Telepon</string>
    <string name="nomor_telepon_mahasiswa">Nomor Telepon Mahasiswa</string>
    <string name="change_password">Change Password</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="tv_account">Account</string>
    <string name="tv_accountType">N/A</string>
    <string name="member">Member</string>
    <string name="tv_MemberSince">N/A</string>
    <string name="full_name">Full Name</string>
    <string name="contoh_email">abc@example.com</string>
    <string name="tvProfile">Profile</string>
    <string name="forget_password">Forget Password</string>
    <string name="tv_current_password">Enter your current password : </string>
    <string name="tv_new_password">Enter your new password : </string>
    <string name="tv_renew_password">Re-enter your new password : </string>
    <string name="category_text">Category : </string>
    <string name="date_text">Date : </string>
    <string name="views_text">Views : </string>
    <string name="not_available">N/A</string>
    <string name="comments_text">Comments :</string>
    <string name="news_desc_text">The description of the news</string>
    <string name="comment_logo">Comment Logo</string>
    <string name="date_example">dd/MM/yyyy</string>
    <string name="news_desc_short">News Description</string>
    <string name="thumbnail_news">thumbnail news</string>
    <string name="news_title_short">News Title</string>
    <string name="search_news_category">Search News Category</string>
    <string name="search_news">Search News</string>
    <string name="bullet_symbol">\u2022</string>
    <string name="share_description">Share News</string>
    <string name="email_mahasiswa_desc">Email Mahasiswa :</string>
    <string name="no_telepon_desc">No Telepon :</string>
    <string name="contact_me">Contact Me Via : </string>
    <string name="or">OR</string>
    <string name="info_button_desc">Info Button</string>
</resources>