<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:alpha="0.80"
    tools:context=".activites.ForgotPasswordActivity">

    <ImageButton
        android:id="@+id/backBtn"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/ic_baseline_arrow_back_24"
        android:background="@android:color/transparent"
        android:layout_marginVertical="15dp"
        android:layout_marginHorizontal="15dp"
        android:contentDescription="@string/back_description" />

    <RelativeLayout
        android:id="@+id/containerForgetPass"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="15dp"
        android:gravity="center">

        <ImageView
            android:id="@+id/iconIv"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginVertical="10dp"
            android:layout_centerHorizontal="true"
            app:srcCompat="@drawable/globalnews_rounded"
            android:contentDescription="@string/logo_description" />

        <TextView
            android:id="@+id/label1Tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iconIv"
            android:textAlignment="center"
            android:layout_marginVertical="5dp"
            android:fontFamily="sans-serif"
            android:text="@string/forget_password_decription"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/label2Tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/label1Tv"
            android:textAlignment="center"
            android:layout_marginVertical="5dp"
            android:fontFamily="sans-serif"
            android:text="@string/forget_password_note1"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/label3Tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/label2Tv"
            android:textAlignment="center"
            android:layout_marginVertical="5dp"
            android:fontFamily="sans-serif"
            android:text="@string/forget_password_note2"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/label4Tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/label3Tv"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="sans-serif"
            android:text="@string/forget_password_req"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailTil"
            app:startIconDrawable="@drawable/ic_email_gray"
            android:background="@drawable/shape_edittext01"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:layout_below="@+id/label4Tv">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:inputType="textEmailAddress"
                android:hint="@string/email_description"
                android:textColorHint="@color/black"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/submitBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/emailTil"
            android:backgroundTint="#010127"
            android:layout_marginVertical="10dp"
            android:text="@string/button_submit_description"
            tools:ignore="TextContrastCheck" />

    </RelativeLayout>

</RelativeLayout>