<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:alpha="0.80"
    tools:context=".activites.CategoryAddActivity">

    <ImageButton
        android:id="@+id/backBtn"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/ic_baseline_arrow_back_24"
        android:background="@android:color/transparent"
        android:layout_marginHorizontal="15dp"
        android:layout_marginVertical="15dp"
        android:contentDescription="@string/back_description" />

    <RelativeLayout
        android:id="@+id/containerAddCategory"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="15dp"
        android:gravity="center">

        <ImageView
            android:id="@+id/iconIv"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_centerHorizontal="true"
            android:layout_marginVertical="15dp"
            android:src="@drawable/globalnews_rounded"
            android:contentDescription="@string/logo_description" />

        <TextView
            android:id="@+id/label1Tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iconIv"
            android:layout_centerHorizontal="true"
            android:layout_marginVertical="5dp"
            android:fontFamily="sans-serif"
            android:text="@string/add_category_title"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/label2Tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/label1Tv"
            android:textAlignment="center"
            android:layout_marginVertical="5dp"
            android:fontFamily="sans-serif"
            android:text="@string/add_category_note"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/label3Tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/label2Tv"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="sans-serif"
            android:text="@string/add_category_req"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/categoryTil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:layout_below="@+id/label3Tv"
            app:hintEnabled="false">

            <EditText
                android:id="@+id/categoryEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_edittext01"
                android:drawableStart="@drawable/ic_category_gray"
                android:drawablePadding="10dp"
                android:hint="@string/input_category"
                android:inputType="textPersonName|textCapWords"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textColorHint="@color/gray01"
                android:autofillHints="false" />

        </com.google.android.material.textfield.TextInputLayout>

        <!--Add category button-->
        <Button
            android:id="@+id/submitBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:backgroundTint="#010127"
            android:text="@string/button_submit_description"
            android:layout_below="@id/categoryTil"
            android:textColor="@color/white"/>

    </RelativeLayout>

</RelativeLayout>