<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:alpha="0.80"
    tools:context=".activites.DashboardAdminActivity">

    <!--Toolbar-->
    <RelativeLayout
        android:id="@+id/toolbarRl"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="#010127">

        <!--ImageButton: Open profile-->
        <ImageButton
            android:id="@+id/profileBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_person_white"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginHorizontal="15dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/profile_button_description" />

        <TextView
            android:id="@+id/titleTv"
            android:layout_width="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:layout_height="wrap_content"
            android:text="@string/admin_dashboard"
            android:textStyle="bold"
            android:textColor="@color/white"
            tools:ignore="RelativeOverlap" />

        <TextView
            android:id="@+id/subTitleTv"
            android:layout_width="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/titleTv"
            android:layout_height="wrap_content"
            android:text="@string/example_email"
            android:textColor="@color/white"/>
        
        <ImageButton
            android:id="@+id/logoutBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_logout_white"
            android:layout_marginHorizontal="15dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/logout_button_description" />

    </RelativeLayout>

    <!--Search-->
    <EditText
        android:id="@+id/searchEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="15dp"
        android:background="@color/white"
        android:layout_below="@id/toolbarRl"
        android:padding="10dp"
        android:hint="@string/search_hint"
        android:textColorHint="@color/gray02"
        android:drawableStart="@drawable/ic_search_gray"
        android:drawablePadding="10dp"
        android:textColor="@color/black"
        android:autofillHints="false"
        android:inputType="textAutoComplete" />

    <!--Categories-->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/categoriesRv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottomLl"
        android:layout_below="@id/searchEt"
        android:layout_marginHorizontal="10dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/row_category" />

    <LinearLayout
        android:id="@+id/bottomLl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <!--Add Category-->
        <Button
            android:id="@+id/addCategoryBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_category"
            android:layout_weight="1"
            android:backgroundTint="#010127"
            android:minHeight="50dp"
            android:textAllCaps="false"
            android:textColor="@color/white"/>

        <!--Add News-->
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/addNewsFab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_article_add_white"
            app:tint="@color/white"
            app:fabCustomSize="50dp"
            android:backgroundTint="#010127"
            android:contentDescription="@string/add_news_button" />
    </LinearLayout>

</RelativeLayout>