<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:alpha="0.80"
    tools:context=".activites.NewsAddActivity">

    <ImageButton
        android:id="@+id/backBtn"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignParentStart="true"
        android:src="@drawable/ic_baseline_arrow_back_24"
        android:background="@android:color/transparent"
        android:layout_marginVertical="15dp"
        android:layout_marginHorizontal="15dp"
        android:contentDescription="@string/back_description" />

    <!--Attach image button-->
    <ImageButton
        android:id="@+id/attchBtn"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignParentEnd="true"
        android:src="@drawable/ic_baseline_image_24"
        android:background="@android:color/transparent"
        android:layout_marginVertical="15dp"
        android:layout_marginHorizontal="15dp"
        android:contentDescription="@string/attach_button" />

    <!--Icon Image-->
    <ImageView
        android:id="@+id/iconIv"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:src="@drawable/globalnews_rounded"
        android:contentDescription="@string/logo_description" />

    <ScrollView
        android:id="@+id/containerScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/iconIv">

        <RelativeLayout
            android:id="@+id/containerNewsAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="15dp">

            <!--Title-->
            <TextView
                android:id="@+id/titleNews"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="15dp"
                android:fontFamily="sans-serif"
                android:text="@string/add_news_title"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"/>

            <!--Input Title-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/titleTil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:layout_below="@+id/titleNews"
                app:hintEnabled="false">

                <EditText
                    android:id="@+id/titleEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_edittext01"
                    android:drawableStart="@drawable/ic_article_gray"
                    android:drawablePadding="10dp"
                    android:hint="@string/news_title"
                    android:inputType="textPersonName|textCapWords"
                    android:padding="10dp"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textColorHint="@color/gray01"
                    android:autofillHints="false" />

            </com.google.android.material.textfield.TextInputLayout>

            <!--Input Description-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/descriptionTil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:layout_below="@+id/titleTil"
                android:layout_marginTop="5dp"
                app:hintEnabled="false">

                <EditText
                    android:id="@+id/descriptionEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_edittext01"
                    android:drawableStart="@drawable/ic_article_gray"
                    android:drawablePadding="10dp"
                    android:hint="@string/news_description"
                    android:inputType="textMultiLine|textCapSentences"
                    android:padding="10dp"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray01"
                    android:autofillHints="false" />

            </com.google.android.material.textfield.TextInputLayout>

            <!--Pick Category form dialog-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/dateTil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:layout_below="@+id/descriptionTil"
                android:layout_marginTop="5dp"
                app:hintEnabled="false">

                <EditText
                    android:id="@+id/dateEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_edittext01"
                    android:drawableStart="@drawable/ic_calendar_gray"
                    android:drawablePadding="10dp"
                    android:hint="@string/news_date"
                    android:inputType="date"
                    android:padding="10dp"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray01"
                    android:autofillHints="false" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/categoryTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/dateTil"
                android:layout_marginVertical="10dp"
                android:background="@drawable/shape_edittext01"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:hint="@string/news_category"
                android:padding="10dp"
                android:textColorHint="@color/gray01"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:drawableStartCompat="@drawable/ic_category_gray"
                app:drawableEndCompat="@drawable/ic_down_gray" />

            <!--Button: upload news-->
            <Button
                android:id="@+id/submitBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#010127"
                android:layout_below="@+id/categoryTv"
                android:layout_marginVertical="10dp"
                android:text="@string/button_submit_description"
                android:textColor="@color/white"/>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>