<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:alpha="0.80"
    tools:context=".activites.NewsListAdminActivity">

    <!--Toolbar-->
    <RelativeLayout
        android:id="@+id/toolbarRl"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="#010127">
        <!--Back button-->
        <ImageButton
            android:id="@+id/backBtn"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/ic_back_white"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/back_description" />

        <!--Title-->
        <TextView
            android:id="@+id/titleTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/news"
            android:layout_marginTop="8dp"
            android:textStyle="bold"
            android:layout_centerHorizontal="true"
            android:textColor="@color/white"/>

        <!--Subtitle/Category of news-->
        <TextView
            android:id="@+id/subTitleTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/category"
            android:textColor="@color/white"
            android:layout_below="@+id/titleTv"/>

    </RelativeLayout>

    <!--Search-->
    <EditText
        android:id="@+id/searchEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="20dp"
        android:background="@color/white"
        android:layout_below="@id/toolbarRl"
        android:padding="10dp"
        android:hint="@string/search_hint"
        android:textColorHint="@color/gray02"
        android:drawableStart="@drawable/ic_search_gray"
        android:drawablePadding="10dp"
        android:textColor="@color/black"
        android:autofillHints="false"
        android:inputType="textAutoComplete"
        app:shapeAppearance="@style/styleCircleImage"/>

    <!--News List-->
    <GridView
        android:id="@+id/newsRv"
        android:layout_width="match_parent"
        android:layout_below="@+id/searchEt"
        android:layout_marginHorizontal="20dp"
        android:verticalSpacing="10dp"
        android:layout_height="match_parent"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/row_news_admin"/>

</RelativeLayout>